# Enterprise-Digital-COO

./: .gitignore  README.md  pyproject.toml  requirements.txt
api/: index.py
backend/: .env  .env.example  config.py  create_database.py  main.py  requirements.txt  test_chromadb_service.py  test_gemini.py  test_list_models.py  test_openai.py  test_openai_final.py  test_openai_simple.py  test_routes.py  test_watsonx.py  verify_files.py
backend/agents/: __init__.py  base_agent.py  business_simulation_agent.py  executive_decision_agent.py  sales_agent.py
backend/api/: __init__.py
backend/chroma_data/: chroma.sqlite3
backend/database/: __init__.py  models.py  schema.sql  session.py
backend/docs/: CHROMADB_SERVICE_GUIDE.md
backend/memory/: __init__.py  chromadb_client.py  examples.py
backend/orchestration/: __init__.py  revenue_drop_workflow.py
backend/services/: README.md  __init__.py  chromadb_service.py  email_service.py  slack_service.py  teams_service.py  websocket_manager.py
backend/static/: excel-analysis.html  finance.html  index.html  operations.html  presentation.html  reports.html  sales.html
docs/: COMPLETE_IMPLEMENTATION_GUIDE.md  DEPLOYMENT_GUIDE.md  HACKATHON_DEMO_SCRIPT.md  HACKATHON_PRESENTATION.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md
docs/architecture/: AGENT_SPECIFICATIONS_INDEX.md  CHROMADB_MEMORY_ARCHITECTURE.md  DATABASE_ER_DIAGRAM.md  DATABASE_SCHEMA.md  GEMINI_INTEGRATION_GUIDE.md  IBM_WATSONX_INTEGRATION_GUIDE.md  LANGGRAPH_ORCHESTRATION.md  (+5 more)
tools/: env-validator.js  health-check.js  log-watcher.js  package.json
(+40 files in other folders)
